Adapt to recent changes in the EGit Activator
The EGit `Activator` used to provide access to the `RepositoryUtil`
that ist used to list the configured repositories in EGit. In recent
versions of EGit access was moved to `RepositoryUtil::getInstance`.

Use reflection to try to get `RepositoryUtil`, first the _old way_,
then the _new way_.

Fix: https://github.com/rherrmann/gonsole/issues/82

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: false
 language: java
 
 jdk:
-  - oraclejdk8
+  - openjdk11
 
 branches:
   only:
@@ -23,9 +23,7 @@ addons:
     - libwebkit-dev
 
 script:
-  - ./mvnw -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.5
-  - ./mvnw -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.7
-  - ./mvnw -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.8
+  - ./mvnw -q -f com.codeaffine.gonsole.releng/pom.xml clean verify -Dtarget-platform-classifier=eclipse-4.20
 
 before_script:
   - "export DISPLAY=:99.0"
