--- a/com.codeaffine.gonsole.releng/repository/pom.xml
+++ b/com.codeaffine.gonsole.releng/repository/pom.xml
@@ -23,6 +23,9 @@
           <repositoryName>Gonsole Software Repository</repositoryName>
           <includeAllDependencies>false</includeAllDependencies>
           <compress>true</compress>
+          <extraArtifactRepositoryProperties>
+            <p2.statsURI>http://www.codeaffine.com/p2-stats</p2.statsURI>
+          </extraArtifactRepositoryProperties>          
         </configuration>
       </plugin>
       
@@ -213,46 +216,6 @@
           <includePacked>true</includePacked>
           <append>true</append>
         </configuration>
-      </plugin>
-            
-      <plugin>
-        <groupId>org.eclipse.tycho.extras</groupId>
-        <artifactId>tycho-eclipserun-plugin</artifactId>
-        <version>${tycho-extras-version}</version>
-        <executions>
-          <execution>
-            <id>add-repo-properties</id>
-            <goals>
-              <goal>eclipse-run</goal>
-            </goals>
-            <phase>package</phase>
-            <configuration>
-              <appArgLine>-application org.eclipse.wtp.releng.tools.addRepoProperties</appArgLine>
-              <argLine>
-                -DartifactRepoDirectory=${project.build.directory}/repository
-                -Dp2StatsURI=http://www.codeaffine.com/p2-stats
-                -DstatsTrackedArtifacts=com.codeaffine.gonsole.feature
-                -DstatsArtifactsSuffix=-${project.version}
-              </argLine>
-              <dependencies>
-                <dependency>
-                  <artifactId>org.eclipse.wtp.releng.tools.feature</artifactId>
-                  <type>eclipse-feature</type>
-                </dependency>
-              </dependencies>
-              <repositories>
-                <repository>
-                  <url>http://download.eclipse.org/webtools/releng/repository</url>
-                  <layout>p2</layout>
-                </repository>
-                <repository>
-                  <url>http://download.eclipse.org/releases/kepler</url>
-                  <layout>p2</layout>
-                </repository>
-              </repositories>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
 
     </plugins>
